# FamilyBudget

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.json
backend/: .env.example  manage.py  pyproject.toml
backend/apps/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/budgets/: admin.py  apps.py  default_categories.py  models.py  reports.py  serializers.py  signals.py  urls.py  views.py
backend/apps/budgets/management/commands/: generate_recurring_transactions.py
backend/apps/budgets/migrations/: 0001_initial.py
backend/apps/spaces/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/spaces/migrations/: 0001_initial.py
backend/config/: urls.py
backend/config/settings/: base.py  local.py  production.py
backend/tests/: conftest.py
backend/tests/accounts/: test_auth.py  test_me.py
backend/tests/budgets/: test_categories.py  test_management_command.py  test_recurring.py  test_reports.py  test_signals.py  test_transactions.py
backend/tests/spaces/: test_invites.py  test_spaces.py
docs/superpowers/plans/: 2026-04-01-backend-implementation.md  2026-04-08-frontend-phase1.md
docs/superpowers/specs/: 2026-03-31-family-budget-backend-design.md  2026-04-08-frontend-design.md
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/components/: ThemeProvider.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: api.ts
frontend/src/mocks/: handlers.ts
(+14 files in other folders)
